Fixed extra icons issue