@@ -322,9 +322,7 @@ lazy val macApp = project.in(file("mac-app")).
       baseDirectory.value / "natives" / "macosx-universal" / "libjcocoa.dylib") ++
       ((netlogo / baseDirectory).value / "natives" / "macosx-universal" * "*.jnilib").get).mkString(":"),
     Compile / packageBin / artifactPath := target.value / "netlogo-mac-app.jar",
-    javacOptions ++= Seq("-bootclasspath", System.getProperty("java.home") + "/lib/rt.jar",
-//  Needed because MacTabbedPaneUI uses com.apple.laf.AquaTabbedPaneContrastUI
-    "--add-exports", "java.desktop/com.apple.laf=ALL-UNNAMED"))
+    javacOptions ++= Seq("-bootclasspath", System.getProperty("java.home") + "/lib/rt.jar"))
 
 // this project is all about packaging NetLogo for distribution
 lazy val dist = project.in(file("dist")).
